# edy

./: .dockerignore  .env  .gitignore  README.md  docker-compose.yml  package-lock.json  setup.sh
Databases/data/: database.txt
Databases/mongodb_databases/: db.categories.json  db.movies.json  db.users.json
Dockerfiles/: Dockerfile.client  Dockerfile.react  Dockerfile.server  Dockerfile.tests  Dockerfile.webserver
client/: client.py
recommendServer/: CMakeLists.txt
recommendServer/headers/: Add.h  ConsoleMenu.h  Delete.h  FileDb.h  Get.h  Help.h  ICommandable.hpp  IDatabase.h  IMenu.h  Patch.h  Post.h  Recommend.h  SocketMenu.h  ThreadPool.h
recommendServer/src/: Add.cpp  App.cpp  CMakeLists.txt  ConsoleMenu.cpp  Delete.cpp  FileDb.cpp  Get.cpp  Help.cpp  Patch.cpp  Post.cpp  Recommend.cpp  Server.cpp  SocketMenu.cpp
recommendServer/tests/: CMakeLists.txt  test_for_add.cpp  test_for_app.cpp  test_for_consoleMenu.cpp  test_for_delete.cpp  test_for_file.cpp  test_for_get.cpp  test_for_help.cpp  test_for_post.cpp  test_for_recommend.cpp  tests_for_patch.cpp
web/: package-lock.json  package.json
web/public/: index.html  manifest.json
web/src/: index.css
web/src/HomePageConnected/Components/Arrow/: Arrow.js  Arrow.module.css
web/src/HomePageConnected/Components/Description/: Description.js  Description.module.css
web/src/HomePageConnected/Components/PreviewMovieInfo/: PreviewMovieInfo.js  PreviewMovieInfo.module.css
web/src/HomePageConnected/Components/SwitchButton/: SwitchButton.js  SwitchButton.module.css
web/src/HomePageConnected/Components/UserIcon/: UserIcon.js  (+1 more)
web/src/HomePageConnected/VideoPlayer/: VideoPlayer.css  VideoPlayer.js
web/src/admin/AdminNavbar/: AdminNavbar.js  AdminNavbar.module.css
web/src/admin/ConfirmButton/: ConfirmButton.js  ConfirmButton.module.css
web/src/admin/MainPage/: MainPage.js  MainPage.module.css
web/src/admin/Message/: Message.js  Message.module.css
web/src/app/: App.js  App.module.css  PrivateRoute.js
web/src/app/Logo/: Logo.js  Logo.module.css
web/src/homePageNotConnected/: Logo.js
web/src/homePageNotConnected/Login/: Login.js  Login.module.css
web/src/homePageNotConnected/Register/: Register.js  Register.module.css
webServer/: app.js  multer.js  package-lock.json  package.json
webServer/controllers/: Categories.js  Tokens.js  Users.js  movies.js
webServer/middlewares/: errorsHandler.js  verifyJWT.js  verifyRoles.js
webServer/models/: Categories.js  Tokens.js  Users.js  movies.js
webServer/routes/: Categories.js  Tokens.js  Users.js  movies.js
webServer/services/: Categories.js  Tokens.js  Users.js  movies.js
wiki/: Backend.md  Web.md  details.txt
(+76 files in other folders)
